<resources>
    <string name="app_name">ModuleFour_Views</string>
    <string name="greeting">Greeting</string>
    <string name="hello_world">HELLO WORLD</string>
    <string name="name_hint">Type Your Name, Please</string>
    <string name="say_hello">Say Hello</string>
    <string name="go_image_test">Go Image Test</string>
    <string name="go_assignemnt_one">Assignment One</string>
    <string name="apple"> Apple </string>
    <string name="orange"> Orange </string>
    <string name="watermelon"> Watermelon </string>
    <string name="check_fruit">Check Fruit</string>
    <string name="your_fruits">Your Fruits</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="toggleOn">ON</string>
    <string name="toggleOFF">OFF</string>
    <string name="door_lock">Door Lock</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="turning_on_room_light">Turning on Room Light</string>
    <string name="turning_off_room_light">Turning off Room Light</string>
    <string name="brightness_status">0.5</string>
    <string name="rating">Rating</string>
    <string name="start_progress">Start Progress</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="selecteddate">SelectedDate</string>
    <string name="selectedTime">Selected Time</string>
    <string name="camera_defination">a boxlike device for holding a film or plate sensitive to light, having an aperture controlled by a shutter that, when opened, admits light enabling an object to be focused, usually by means of a lens, on the film or plate, thereby producing a photographic image</string>
    <string name="done">Done</string>
    <string name="write_your_message">Write your message</string>
    <string name="rate_your_driver">Rate Your Driver</string>
    <string name="name_michael_douglas">Michael Douglas</string>
    <string name="price_5_58">$5.58</string>
    <string name="your_ride_is">Your ride is</string>
    <string name="your_ride">Your Ride</string>
    <string name="time_status">March 21,2020 at 10:30 am</string>
    <string name="linear_and_frame">Linear and Frame</string>
    <string name="go_to_rider">Go Your Ride</string>
</resources>