<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnGoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_image_test" />


    <Button
        android:id="@+id/btnGoAssignmentOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/go_assignemnt_one" />

    <Button
        android:id="@+id/btnGoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_and_frame"
        android:layout_below="@+id/btnGoImageView"
        />

    <Button
        android:id="@+id/btnGoYourRider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_rider"
        android:layout_below="@+id/btnGoAssignmentOne"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>