<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    tools:context=".views.YourRideAssignmentActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:navigationIcon="@drawable/ic_back"
                app:title="Your Ride"
                app:titleTextColor="#6A6868"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">


            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/your_ride_is" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvOne"
            android:layout_centerHorizontal="true"
            android:text="@string/price_5_58"
            android:textSize="35sp"
            android:textStyle="bold"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTwo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/time_status" />

        <View
            android:id="@+id/viewOne"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@id/tvTime"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#D1D0D0" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circularIv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/viewOne"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/spider"
            app:civ_border_color="#F1EEEE"
            app:civ_border_width="8dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/circularIv"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/name_michael_douglas"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRatingResut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/rate_your_driver"

            />

        <RatingBar
            android:id="@+id/ratingDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRatingResut"
            android:layout_centerHorizontal="true"
            android:numStars="5"
            android:rating="4"
            android:stepSize="0.25" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edMessage"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingDriver"
            android:layout_margin="20dp">

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/ratingDriver"
                android:hint="@string/write_your_message" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/rounded_button"
            android:id="@+id/btnDone"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edMessage"
            android:layout_margin="20dp"
            android:text="@string/done" />
    </RelativeLayout>
</ScrollView>


</RelativeLayout>